cmake_minimum_required(VERSION 3.13)
project(competitive_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(competitive_programming main.cpp abc086_a.cpp abc081_a.cpp abc081_b.cpp abc087_b.cpp abc088_b.cpp exawizards2019_a.cpp exawizards2019_b.cpp exawizards2019_c.cpp abc083_b.cpp abc085_b.cpp abc085_c.cpp abc049_c.cpp abc086_c.cpp)