cmake_minimum_required(VERSION 3.13)
project(competitive_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(competitive_programming main.cpp abc086_a.cpp abc081_a.cpp abc081_b.cpp abc087_b.cpp abc088_b.cpp exawizards2019_a.cpp exawizards2019_b.cpp exawizards2019_c.cpp abc083_b.cpp abc085_b.cpp abc085_c.cpp abc049_c.cpp abc086_c.cpp abc075_b.cpp abc096_c.cpp abc070_b.cpp abc055_b.cpp abc046_b.cpp abc048_b.cpp abc060_b.cpp abc065_b.cpp abc124_a.cpp abc124_b.cpp abc124_c.cpp wip_abc124_d.cpp aoj_ITP1_1_A.cpp aoj_ALDS1_1_D.cpp aoj_ALDS1_1_A.cpp aoj_ALDS1_2_A.cpp wip_aoj_ALDS1_2_B.cpp abc087_c.cpp aoj_ALDS1_2_B.cpp abc098_c.cpp abc079_c.cpp abc100_a.cpp abc100_b.cpp aoj_ALDS1_2_C.cpp tenka1_2019_a.cpp tenka1_2019_b.cpp tenka1_2019_c.cpp wip_tenka1_2019_d.cpp abc100_c.cpp abc101_a.cpp abc101_b.cpp "wip_abc101_c .cpp" abc102_a.cpp abc102_b.cpp abc102_c.cpp abc103_a.cpp abc103_b.cpp abc103_c.cpp abc104_a.cpp abc104_b.cpp wip_abc104_c.cpp abc105_a.cpp abc105_b.cpp abc106_a.cpp)
