cmake_minimum_required(VERSION 3.13)
project(competitive_programming)

set(CMAKE_CXX_STANDARD 14)


add_executable(competitive_programming main.cpp abc086_a.cpp abc081_a.cpp abc081_b.cpp abc087_b.cpp abc088_b.cpp exawizards2019_a.cpp exawizards2019_b.cpp exawizards2019_c.cpp abc083_b.cpp abc085_b.cpp abc085_c.cpp abc049_c.cpp abc086_c.cpp abc075_b.cpp abc096_c.cpp abc070_b.cpp abc055_b.cpp abc046_b.cpp abc048_b.cpp abc060_b.cpp abc065_b.cpp abc124_a.cpp abc124_b.cpp abc124_c.cpp abc124_d.cpp)
